force-app/main/default/objects/WRDB_Asset__c/WRDB_Asset__c.object-meta.xml
<CustomObject>
    <label>WRDB_Asset</label>
    <nameField>
        <label>WRDB_Asset Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Wardrobing Asset</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>