force-app/main/default/objects/WRDB_Asset__c/fields/azureId__c.field-meta.xml
<CustomField>
    <fullName>azureId__c</fullName>
    <label>azureId</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>