force-app/main/default/objects/WRDB_Asset__c/fields/collectionId__c.field-meta.xml
<CustomField>
    <fullName>collectionId__c</fullName>
    <description>Azure collection Id</description>
    <label>collectionId</label>
    <length>30</length>
    <type>Text</type>
</CustomField>