force-app/main/default/objects/WRDB_Asset__c/fields/gender__c.field-meta.xml
<CustomField>
    <fullName>gender__c</fullName>
    <label>gender</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>men</fullName>
            </value>
            <value>
                <fullName>women</fullName>
            </value>
            <value>
                <fullName>celebration</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>