force-app/main/default/objects/WRDB_Asset__c/fields/relatedSkus__c.field-meta.xml
<CustomField>
    <fullName>relatedSkus__c</fullName>
    <label>relatedSkus</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>