force-app/main/default/objects/WRDB_Asset__c/fields/scope__c.field-meta.xml
<CustomField>
    <fullName>scope__c</fullName>
    <label>Scope</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>user</fullName>
            </value>
            <value>
                <fullName>global</fullName>
            </value>
            <value>
                <fullName>icon</fullName>
                <default>true</default>
                <label>icon</label>
            </value>
            <value>
                <fullName>collection</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>