force-app/main/default/objects/WRDB_Asset__c/fields/type__c.field-meta.xml
<CustomField>
    <fullName>type__c</fullName>
    <label>type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>gif</fullName>
            </value>
            <value>
                <fullName>picture</fullName>
                <default>true</default>
                <label>picture</label>
            </value>
            <value>
                <fullName>video</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>