force-app/main/default/objects/WRDB_Asset__c/fields/zone__c.field-meta.xml
<CustomField>
    <fullName>zone__c</fullName>
    <label>zone</label>
    <length>100</length>
    <type>Text</type>
</CustomField>