force-app/main/default/objects/WRDB_Asset__c/listViews/Accessories.listView-meta.xml
<ListView>
    <fullName>Accessories</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <label>Accessories</label>
</ListView>