force-app/main/default/objects/WRDB_Asset__c/listViews/Fragrance.listView-meta.xml
<ListView>
    <fullName>Fragrance</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <label>Fragrance</label>
</ListView>