force-app/main/default/objects/WRDB_Asset__c/listViews/Watches_Jewelry.listView-meta.xml
<ListView>
    <fullName>Watches_Jewelry</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <label>Watches &amp; Jewelry</label>
</ListView>